force-app/main/default/objects/plaunch__Planning__c/plaunch__Planning__c.object-meta.xml
<CustomObject>
    <description>PipeLaunch Target List of Contacts or Leads</description>
    <label>Planning</label>
    <nameField>
        <displayFormat>P-{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plannings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>