force-app/main/default/objects/plaunch__Planning__c/fields/plaunch__Last_Used__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Last_Used__c</fullName>
    <description>Stores the last time this list was used</description>
    <label>Last Used</label>
    <type>DateTime</type>
</CustomField>