force-app/main/default/objects/plaunch__Planning__c/fields/plaunch__List_Name__c.field-meta.xml
<CustomField>
    <fullName>plaunch__List_Name__c</fullName>
    <description>List Name</description>
    <inlineHelpText>List Name</inlineHelpText>
    <label>List Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>