force-app/main/default/objects/plaunch__Planning__c/fields/plaunch__Settings__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Settings__c</fullName>
    <inlineHelpText>Settings stored from planning view</inlineHelpText>
    <label>Settings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>